[gd_scene load_steps=5 format=3 uid="uid://dcyka5e06knff"]

[ext_resource type="Script" uid="uid://ialu366byly2" path="res://TitleScreen/menu.gd" id="1_oi0p3"]
[ext_resource type="FontFile" uid="uid://cb4e8g30xxp5u" path="res://Font/tenderness.otf" id="1_xdjxl"]
[ext_resource type="Texture2D" uid="uid://dfcmy2er55376" path="res://Textures/GUI/384003819.webp" id="2_cxswi"]
[ext_resource type="PackedScene" uid="uid://b7c7gsdx2rkjm" path="res://Utility/basic_button.tscn" id="3_kwsdd"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oi0p3")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(340.5, 193)
scale = Vector2(0.532031, 0.544444)
texture = ExtResource("2_cxswi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 673.0
offset_bottom = 382.0
color = Color(0.572549, 0.207843, 0.168627, 1)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_top = 46.0
offset_right = 640.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("1_xdjxl")
theme_override_font_sizes/font_size = 72
text = "Vampire Hunters"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_play" parent="." instance=ExtResource("3_kwsdd")]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 70.0
offset_right = 50.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
text = "Грати"

[node name="btn_exit" parent="." instance=ExtResource("3_kwsdd")]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.835938
anchor_top = 0.75
anchor_right = 0.960938
anchor_bottom = 0.85
offset_left = -245.0
offset_top = 30.0
offset_right = -245.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
text = "Вийти"

[connection signal="click_end" from="btn_play" to="." method="_on_btn_play_click_end"]
[connection signal="pressed" from="btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="click_end" from="btn_exit" to="." method="_on_btn_exit_click_end"]
